# PyShortTextCategorization

./: .gitignore  .readthedocs.yml  .travis.yml  CrossValidationBatchRun.py  LICENSE  MANIFEST.in  README.md  ShortTextCategorizer.py  ShortTextCategorizerConsole.py  ShortTextCategorizerModelTrainer.py  UPCOMING.md  intro.md  py36requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_requirements.txt  shorttext_tests.py  test_requirements.txt
.circleci/: config.yml
.github/workflows/: publish-to-pypi.yml
apidocs/: Makefile
apidocs/source/: codes.rst  conf.py  install.rst
classifiers/: AutoencoderEmbedVecClassification.py  CNNEmbedVecClassification.py  SumWord2VecClassification.py  VarNNEmbedVecClassification.py  __init__.py
crossval/: autoencoder_accuracies.csv  autoencoder_testdata.csv  cnn_accuracies.csv  cnn_testdata.csv  plot.R  sumword2vec_accuracies.csv  sumword2vec_testdata.csv
data/: shorttext_exampledata.csv
data/exampledata_models/autoencoder/: autoencoder_encoder.h5  autoencoder_trainedvecs.pickle
data/exampledata_models/cnn/: cnn.h5  cnn.json
docs/: Makefile  codes.rst  conf.py  faq.rst  index.rst  install.rst  intro.rst  links.rst  news.rst  refs.rst  requirements.txt  requirements_minimal.txt  scripts.rst  tutorial.rst  tutorial_charbaseonehot.rst  tutorial_charbaseseq2seq.rst  tutorial_dataprep.rst  tutorial_dtm.rst  tutorial_maxent.rst  tutorial_metrics.rst  tutorial_nnlib.rst  tutorial_spell.rst  tutorial_stacking.rst  tutorial_sumvec.rst  tutorial_textpreprocessing.rst  tutorial_topic.rst  tutorial_wordembed.rst  tutorial_wordembedAPI.rst
examples/sakaguchi_spell/: binarize.py  sakaguchi.py
nnlib/: frameworks.py
pretrained_models/autoencoder/: autoencoder_encoder.json
pretrained_models/cnn/: cnn.h5  cnn_classlabels.txt
pretrained_models/sumwv/: sumwv_embedvecdict.pickle
readthedocs/source/: conf.py  doclink.rst  index.rst  install.rst
script/: ShortTextCategorizerConsole  ShortTextWordEmbedSimilarity
shorttext/: CrossValidationBatchRun.py  ShortTextCategorizer.py  ShortTextCategorizerConsole.py  ShortTextCategorizerModelTrainer.py  __init__.py  smartload.py
shorttext/classifiers/: AutoencoderEmbedVecClassification.py  CNNEmbedVecClassification.py  SumWord2VecClassification.py  VarNNEmbedVecClassification.py  __init__.py
shorttext/classifiers/bow/: __init__.py
shorttext/classifiers/bow/maxent/: MaxEntClassification.py
shorttext/classifiers/bow/topic/: LatentTopicModeling.py  SkLearnClassification.py  TopicVectorDistanceClassification.py  __init__.py
shorttext/classifiers/embed/: __init__.py
shorttext/classifiers/embed/autoencode/: AutoencoderEmbedVecClassification.py
shorttext/classifiers/embed/nnlib/: CNNEmbedVecClassification.py  VarNNEmbedVecClassification.py  VarNNSumEmbedVecClassification.py  VarNNWord2VecClassification.py  __init__.py  frameworks.py
shorttext/classifiers/embed/sumvec/: SumEmbedVecClassification.py  SumWord2VecClassification.py  VarNNSumEmbedVecClassification.py  __init__.py  frameworks.py
shorttext/cli/: categorization.py
shorttext/data/: __init__.py  data_retrieval.py
shorttext/generators/: __init__.py
shorttext/generators/bow/: AutoEncodingTopicModeling.py  GensimTopicModeling.py  LatentTopicModeling.py  __init__.py
shorttext/generators/charbase/: __init__.py  char2concatvec.py  char2vec.py
shorttext/generators/seq2seq/: charbaseS2S.py  s2skeras.py
shorttext/metrics/: __init__.py
shorttext/metrics/dynprog/: __init__.py  dldist.c  dldist.h  dldist.i  dldist.py  dldist.pyx  dldist_wrap.c  jaccard.py  lcp.c  lcp.py  lcp.pyx
shorttext/metrics/embedfuzzy/: jaccard.py
shorttext/metrics/transformers/: __init__.py  bertscore.py
shorttext/metrics/wasserstein/: __init__.py  wordmoverdist.py
shorttext/nnlib/: frameworks.py
shorttext/spell/: __init__.py  basespellcorrector.py  binarize.py  editor.py  edits1_comb.c  edits1_comb.pyx  norvig.py  sakaguchi.py
shorttext/stack/: __init__.py  stacking.py
shorttext/utils/: __init__.py  classification_exceptions.py  compactmodel_io.py  deprecation.py  dtm.py  gensim_corpora.py  kerasmodel_io.py  misc.py  nonneg_stopwords.txt  stopwordset.pkl  textpreprocessing.py  transformers.py  wordembed.py
src/shorttext/: __init__.py  smartload.py
src/shorttext/classifiers/: __init__.py  base.py
src/shorttext/classifiers/bow/: __init__.py
src/shorttext/classifiers/bow/maxent/: MaxEntClassification.py  __init__.py
src/shorttext/classifiers/bow/topic/: SkLearnClassification.py  TopicVectorDistanceClassification.py  __init__.py
src/shorttext/classifiers/embed/nnlib/: frameworks.py  (+1 more)
src/shorttext/cli/: categorization.py  wordembedsim.py
src/shorttext/data/: data_retrieval.py
src/shorttext/generators/: __init__.py
src/shorttext/generators/bow/: AutoEncodingTopicModeling.py  GensimTopicModeling.py  LatentTopicModeling.py  __init__.py
src/shorttext/generators/charbase/: __init__.py  char2vec.py
src/shorttext/generators/seq2seq/: __init__.py  charbaseS2S.py  s2skeras.py
src/shorttext/metrics/: __init__.py
src/shorttext/metrics/dynprog/: __init__.py  dldist.py  jaccard.py  lcp.py
src/shorttext/metrics/embedfuzzy/: __init__.py  jaccard.py
src/shorttext/metrics/wasserstein/: __init__.py  wordmoverdist.py
src/shorttext/schemas/: models.py
src/shorttext/spell/: __init__.py  basespellcorrector.py  editor.py  norvig.py
src/shorttext/stack/: stacking.py
src/shorttext/utils/: __init__.py  classification_exceptions.py  compactmodel_io.py  compute.py  dtm.py  gensim_corpora.py  kerasmodel_io.py  misc.py  stopwords.txt  textpreprocessing.py  wordembed.py
test/: StackingTest.ipynb  StemmerTests.ipynb  TestDecorator.ipynb  TokenizerTests.ipynb  __init__.py  test_bertrepresentations.py  test_charonehot.py  test_compute.py  test_dtm.py  test_fuzzylogic.py  test_mergedict.py  test_norvigspell.py  test_sakaguchispell.py  test_spellcheck.py  test_stacking.py  test_textpreprocessing.py  test_topicmodeling.py  test_var_nn_embedded_vec_classifier.py  test_wmd.py
utils/: __init__.py  classification_exceptions.py
(+3 files in other folders)
