[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shorttext"
version = "4.0.0a10"
authors = [
    {name = "Kwan Yuet Stephen Ho", email = "stephenhky@yahoo.com.hk"}
]
description = "Short Text Mining"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
keywords = ["shorttext", "natural language processing", "text mining"]
requires-python = ">=3.11"
classifiers = [
      "Topic :: Scientific/Engineering :: Artificial Intelligence",
      "Topic :: Scientific/Engineering :: Mathematics",
      "Topic :: Text Processing :: Linguistic",
      "Topic :: Software Development :: Libraries :: Python Modules",
      "Programming Language :: Python :: 3.11",
      "Programming Language :: Python :: 3.12",
      "Programming Language :: Python :: 3.13",
      "Natural Language :: English",
      "License :: OSI Approved :: MIT License",
      "Intended Audience :: Developers",
      "Intended Audience :: Education",
      "Intended Audience :: Information Technology",
      "Intended Audience :: Science/Research"
]
dependencies = [
    "numpy>=1.23.3",
    "scipy>=1.12.0",
    "joblib>=1.3.0",
    "scikit-learn>=1.2.0",
    "tensorflow>=2.13.0",
    "keras>=3.0.0",
    "gensim>=4.0.0",
    "pandas>=1.2.0",
    "snowballstemmer>=3.0.0",
    "numba>=0.57.0",
    "deprecation>=2.0.0",
    "npdict>=0.0.10",
    "sparse>=0.10.0",
    "orjson>=3.0.0",
    "loguru>=0.6.0"
]

[project.urls]
Repository = "https://github.com/stephenhky/PyShortTextCategorization"
Issues = "https://github.com/stephenhky/PyShortTextCategorization/issues"
Documentation = "https://shorttext.readthedocs.io"

[tool.setuptools]
packages = [
    "shorttext",
    "shorttext.cli",
    "shorttext.utils",
    "shorttext.classifiers",
    "shorttext.classifiers.embed",
    "shorttext.classifiers.embed.nnlib",
    "shorttext.classifiers.embed.sumvec",
    "shorttext.classifiers.bow",
    "shorttext.classifiers.bow.topic",
    "shorttext.classifiers.bow.maxent",
    "shorttext.data",
    "shorttext.stack",
    "shorttext.generators",
    "shorttext.generators.bow",
    "shorttext.generators.charbase",
    "shorttext.generators.seq2seq",
    "shorttext.metrics",
    "shorttext.metrics.dynprog",
    "shorttext.metrics.wasserstein",
    "shorttext.metrics.embedfuzzy",
    "shorttext.schemas",
    "shorttext.spell"
]
zip-safe = false
package-dir = {"" = "src"}

[project.scripts]
ShortTextCategorizerConsole = "shorttext.cli.categorization:main"
ShortTextWordEmbedSimilarity = "shorttext.cli.wordembedsim:main"

[project.optional-dependencies]
test = ["pytest"]
